Fixed footer align

--- a/source/styles/site.footer.styl
+++ b/source/styles/site.footer.styl
@@ -2,6 +2,7 @@ footer
   position                              : absolute
   bottom                                : SPACE
   left                                  : 0
+  right                                 : 0
   width                                 : auto
   padding                               : 0 !important
   font-size                             : 76%
